--- a/index.html
+++ b/index.html
@@ -55,27 +55,34 @@
     <main>
 
         <section id="Trailer">
-            <img src="src/img/PlaceHolder.png" id="trailer"></div>
+            <iframe id="trailer" width="853" height="480" src="https://www.youtube.com/embed/cWBwFhUv1-8" title="Dark Souls III – Launch Trailer | PS4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </iframe>
         </section>
 
         <section id="home">
             <div id="Home">
-
+                <t1 id="AboutMe-titulo">Sobre Nós</t1>
+                <p id="AboutMe">Somos um estúdio de games apaixonado por criar experiências inesquecíveis.<br>
+                    <br>
+                    Desde o primeiro conceito até o último frame, nossa missão é contar histórias envolventes,
+                    desafiar<br>
+                    a criatividade e entregar jogos que conectem pessoas ao redor do mundo. Acreditamos que os games
+                    são<br>
+                    mais do que entretenimento — são uma forma de arte, expressão e comunidade.<br>
+                    <br>
+                    Com uma equipe formada por desenvolvedores, artistas, roteiristas e sonhadores, unimos tecnologia
+                    e<br>
+                    imaginação para dar vida a mundos únicos, personagens marcantes e jogabilidades que deixam
+                    aquele<br>
+                    gostinho de “só mais uma partida”.<br>
+                    <br>
+                    Estamos só começando, e mal podemos esperar para mostrar a você o que vem por aí.
+                </p>
             </div>
         </section>
 
         <section id="Games">
-            <div class="card-View">
-
-                <image src="src/img/Banner.png" class="Teste"></image>
-                <image src="src/img/Banner.png" class="Teste"></image>
-                <image src="src/img/Banner.png" class="Teste"></image>
-                <image src="src/img/Banner.png" class="Teste"></image>
-                <image src="src/img/Banner.png" class="Teste"></image>
-                <image src="src/img/Banner.png" class="Teste"></image>
-                <image src="src/img/Banner.png" class="Teste"></image>
-                <image src="src/img/Banner.png" class="Teste"></image>
-
+            <div class="card-View" id="card-View">
             </div>
         </section>
 
@@ -83,51 +90,31 @@
             <div class="card-View-fans">
 
                 <div class="Teste-fans">
-                    <img src="src/img/Banner.png" class="teste-fans-image">
+                    <img src="src/img/Pessoas/p2.jpg" class="teste-fans-image">
                     <div class="teste-fans-texto">
-                        <t1>nome: sei la quem da silva</t1>
-                        <p>" Lorem ipsum dolor sit amet. Nam neque quos aut recusandae corporis sit laboriosam<br>
-                            ipsum ut recusandae necessitatibus et possimus sequi et velit alias. At suscipit sunt
-                            non<br>
-                            veniam omnis eos culpa quam.<br>
-
-                            Id molestias quia quo laboriosam repudiandae qui ipsam reiciendis cum molestiae delectus
-                            est<br>
-                            impedit labore cum quia expedita rem illo tenetur. Cum nostrum ipsam in quam repudiandae
-                            et<br>
-                            aperiam accusamus ea cumque vero."</p>
+                        <t1>nome: Ana Rodrigues – @GamerAna</t1>
+                        <p>"Os jogos desse estúdio sempre me surpreendem! Histórias envolventes, gráficos incríveis <br>
+                            e uma atenção aos detalhes que faz toda a diferença. Virei fã desde o primeiro lançamento!"
+                        </p>
                     </div>
                 </div>
                 <div class="Teste-fans">
-                    <img src="src/img/Banner.png" class="teste-fans-image">
+                    <img src="src/img/Pessoas/p1.jpg" class="teste-fans-image">
                     <div class="teste-fans-texto">
-                        <t1>nome: sei la quem da silva</t1>
-                        <p>" Lorem ipsum dolor sit amet. Nam neque quos aut recusandae corporis sit laboriosam<br>
-                            ipsum ut recusandae necessitatibus et possimus sequi et velit alias. At suscipit sunt
-                            non<br>
-                            veniam omnis eos culpa quam.<br>
-
-                            Id molestias quia quo laboriosam repudiandae qui ipsam reiciendis cum molestiae delectus
-                            est<br>
-                            impedit labore cum quia expedita rem illo tenetur. Cum nostrum ipsam in quam repudiandae
-                            et<br>
-                            aperiam accusamus ea cumque vero."</p>
+                        <t1>nome: Lucas Almeida – @Luc4sPlay</t1>
+                        <p>"É raro encontrar um estúdio tão comprometido com a experiência do jogador. Cada game tem
+                            <br>
+                            alma própria, dá pra ver o carinho e dedicação da equipe em cada fase!"
+                        </p>
                     </div>
                 </div>
                 <div class="Teste-fans">
-                    <img src="src/img/Banner.png" class="teste-fans-image">
+                    <img src="src/img/Pessoas/p3.jpg" class="teste-fans-image">
                     <div class="teste-fans-texto">
-                        <t1>nome: sei la quem da silva</t1>
-                        <p>" Lorem ipsum dolor sit amet. Nam neque quos aut recusandae corporis sit laboriosam<br>
-                            ipsum ut recusandae necessitatibus et possimus sequi et velit alias. At suscipit sunt
-                            non<br>
-                            veniam omnis eos culpa quam.<br>
-
-                            Id molestias quia quo laboriosam repudiandae qui ipsam reiciendis cum molestiae delectus
-                            est<br>
-                            impedit labore cum quia expedita rem illo tenetur. Cum nostrum ipsam in quam repudiandae
-                            et<br>
-                            aperiam accusamus ea cumque vero."</p>
+                        <t1>nome: Carla Menezes – @CarlinhaXP</t1>
+                        <p>"A criatividade desse estúdio é fora do comum. Toda vez que anunciam um novo jogo, já sei
+                            que<br>
+                            vem coisa boa. Diversão garantida, com qualidade de sobra!"</p>
                     </div>
                 </div>
 
